# IoTSupport

./: .codehealthignore  .copier-answers.yml  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  IoTSupport.code-workspace  Jenkinsfile  Jenkinsfile.architecture  Jenkinsfile.architecture-backend  Jenkinsfile.architecture-frontend  Procfile.dev  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run-pgadmin.sh  run.py  vulture_whitelist.py
backend/: .copier-answers.yml  .env.example  .env~  AGENTS.md  Dockerfile  Jenkinsfile  Jenkinsfile.architecture  README.md  alembic.ini  pyproject.toml  run-pgadmin.sh  run.py
backend/.llmbox/: docker-compose.yml
backend/alembic/versions/: 002_device_provisioning.py  003_create_settings_table.py  004_add_device_fields_and_config_schema.py  006_firmware_versions_and_nullable_filename.py  007_drop_coredumps_filename.py  008_add_device_active_flag.py
backend/app/: __init__.py  app.py  app_config.py  cli.py  config.py  database.py  exceptions.py  startup.py
backend/app/api/: __init__.py  assets.py  auth.py  configs.py  coredumps.py  device_log_stream.py  device_models.py  devices.py  health.py  images.py  internal.py  iot.py  pipeline.py  rotation.py  testing.py  testing_device_sse.py
backend/app/data/test_data/: device_models.json  devices.json
backend/app/models/: __init__.py  config.py  coredump.py  device.py  device_model.py  firmware_version.py  setting.py
backend/app/schemas/: __init__.py  asset_upload.py  config.py  coredump.py  device.py  device_log_stream.py  device_logs.py  device_model.py  rotation.py  testing.py  testing_device_sse.py  testing_logs_seed.py
backend/app/services/: __init__.py  asset_upload_service.py  auth_service.py  config_service.py  container.py  coredump_service.py  device_log_stream_service.py  device_model_service.py  device_service.py  elasticsearch_service.py  firmware_service.py  image_proxy_service.py  keycloak_admin_service.py  logsink_service.py  metrics_service.py  migration_service.py  mqtt_service.py  oidc_client_service.py  rotation_nudge_service.py  rotation_service.py  s3_service.py  sse_connection_manager.py  test_data_service.py  testing_service.py
backend/app/templates/: upload_firmware.ps1.j2  upload_firmware.sh.j2
backend/app/utils/: ansi.py  auth.py  device_auth.py  error_handling.py  fs.py  mqtt.py
backend/app/utils/lvgl/: LVGLImage.py  README.md  __init__.py
backend/docs/: features.md  product_brief.md
backend/docs/architecture/: architecture.yaml  firmware-products.yaml
backend/docs/commands/: review_plan.md
backend/docs/features/ai_part_cleanup/: code_review.md  plan_execution_report.md
backend/docs/features/ai_testing_mode/: change_brief.md  code_review.md  frontend_instructions.md  plan.md  plan_review.md
backend/docs/features/asset_upload/: code_review.md  migration_improved.md  plan.md  plan_review.md
backend/docs/features/config_refactor/: change_brief.md  plan.md  plan_execution_report.md  plan_review.md
backend/docs/features/coredump_parsing/: change_brief.md  code_review.md  plan.md  plan_review.md  requirements_verification.md
backend/docs/features/coredump_upload/: change_brief.md  code_review.md
backend/docs/features/database_config_storage/: change_brief.md  code_review.md  plan.md  plan_execution_report.md
backend/docs/features/datasheet_spec_extraction/: code_review.md  plan.md  plan_execution_report.md
backend/docs/features/device_active_flag/: code_review.md  plan.md  plan_execution_report.md
backend/docs/features/device_logs/: plan_execution_report.md  requirements_verification.md
backend/docs/features/device_provisioning_mdm/: change_brief.md  frontend_impact.md
backend/docs/features/esp32_device_endpoints/: change_brief.md  code_review.md  plan.md  plan_execution_report.md
backend/docs/features/iot_config_management/: code_review.md  plan_execution_report.md  plan_review.md  requirements_verification.md
backend/docs/features/iot_device_fleet_architecture/: plan.md  requirements_verification.md
backend/docs/features/kit_attachments/: plan.md
backend/docs/features/lvgl_image_proxy/: change_brief.md  code_review.md  plan.md  plan_review.md
backend/docs/features/mouser_api_integration/: change_brief.md  code_review.md
backend/docs/features/mqtt_logsink/: code_review.md  plan_execution_report.md  plan_review.md
backend/docs/features/mqtt_notifications/: change_brief.md  plan_execution_report.md  plan_review.md
backend/docs/features/nvs_provisioning/: change_brief.md  code_review.md  plan.md  requirements_verification.md
backend/docs/features/oidc_auth/: change_brief.md  code_review.md  plan_addition.md  requirements_verification.md
backend/docs/features/s3_storage_migration/: code_review.md  plan_review.md
backend/docs/features/sse_frontend_testing_support/: change_brief.md  code_review.md  plan.md  plan_execution_report.md
backend/docs/features/sse_realtime_updates/: change_brief.md  code_review.md  (+3 more)
backend/scripts/: args.sh  dev-sse-gateway.sh
backend/tests/: __init__.py  conftest.py  conftest_infrastructure.py  test_config.py  test_startup.py
backend/tests/api/: test_assets.py  test_auth_endpoints.py  test_auth_middleware.py  test_configs.py  test_coredumps.py  test_device_log_stream.py  test_device_models.py  test_devices.py  test_health.py  test_iot.py  test_pipeline.py  test_rotation.py  test_testing.py  test_testing_device_sse.py
backend/tests/fixtures/: architecture_dataset.json  architecture_projection.json
backend/tests/services/: test_architecture_trigger_wiring.py  test_asset_upload_service.py  test_auth_service.py  test_config_service.py  test_coredump_service.py  test_device_log_stream_service.py  test_device_model_service.py  test_device_service.py  test_elasticsearch_service.py  test_image_proxy_service.py  test_keycloak_admin_service.py  test_logsink_service.py  test_mqtt_service.py  test_rotation_nudge_service.py  test_rotation_service.py  test_sse_connection_manager.py
backend/tests/utils/: test_mqtt.py  test_nvs_generator.py
(+240 files in other folders)
